@@ -19,7 +19,6 @@ import java.util.Collection;
 import java.util.Map;
 import java.util.Optional;
 import java.util.concurrent.atomic.AtomicBoolean;
-import java.util.stream.Collectors;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.apache.tuweni.bytes.Bytes32;
@@ -135,6 +134,6 @@ public class BeaconProposerPreparer implements ValidatorTimingChannel {
                             new BeaconPreparableProposer(
                                 UInt64.valueOf(entry.getValue()), eth1Address)))
         .flatMap(Optional::stream)
-        .collect(Collectors.toList());
+        .toList();
   }
 }
